# skillbox

./: CMakeLists.txt
c104/: c104.c  fibo.c  fibo.h  result.txt  sapper.c  sapper.h
c116/: c116.c  data_employee.txt  data_journal.txt  data_library.txt  employee.c  employee.h  library.c  library.h  result_employee.txt  result_journal.txt  result_library.txt  student.c  student.h
c125/: c125.c
c134/: c134.c  result.txt  result10.txt  result20.txt  signal.c  signal.h
c144/: c144.c  result05Noise10Filter05.txt  result05Noise10Filter10.txt  result05Noise20Filter05.txt  result05Noise20Filter10.txt  result20Noise10Filter05.txt  result20Noise10Filter10.txt  result20Noise20Filter05.txt  result20Noise20Filter10.txt
c154/: c154.c  result.txt  scissorsPaperStone.c  scissorsPaperStone.h
c55/: c55.c  result.txt
c64/: c64.c  result.txt
c74/: c74.c  result.txt
c86/: c86.c  result.txt
c95/: c95.c  result.txt
lib/SafeInput/: SafeInput.c  SafeInput.h
